header: fix padding for last elem

--- a/frontend/src/assets/styles/header.css
+++ b/frontend/src/assets/styles/header.css
@@ -32,9 +32,9 @@ header {
 .headerInput input:focus {
     outline: none;
 }
-.search-icon {
-    margin-right: 19px;
-}
 .right {
     margin-left: auto;
+}
+.right *:not(:last-child) {
+    margin-right: 19px;
 }
